--- a/client/src/styles/tech.scss
+++ b/client/src/styles/tech.scss
@@ -5,12 +5,16 @@
 
     & .tech-inner {
 
-        display: flex;
-        flex-wrap: wrap;
+        
         padding-top: 160px;
+        position: relative;
 
         & .tech-items-grid {
-            display: none;
+            position: absolute;
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            top: 0;
         }
     }
 
@@ -19,10 +23,13 @@
 
 .tech-carousel {
 
-    position: relative;
+
+    width: 100%;
+    top: 130px;
+    position: absolute;
     box-sizing: border-box;
     width: 100%;
-    transition: transform .46s ease-in-out;
+    transition: transform .46s ease-in-out, opacity .2s ease-out .36s;
     box-sizing: border-box;
     display: flex;
     --gap-left: 130px;
@@ -38,6 +45,7 @@
         padding-right: var(--gap-left);
         position: relative;
         & .tech-cart-item-inner {
+            box-shadow: 0 0 30px -10px #000;
             border-radius: 30px;
             position: relative;
             min-height: 400px;
@@ -86,20 +94,33 @@
 }
 
 .tech-carousel-controls {
-    position: relative;
+    position: absolute;
     display: flex;
     width: 100%;
-
+    top: 30px;
     & .flexer {
         flex: 1;
     }
 
+    & .tech-button-transparent {
+        background-color: $background-color-2;
+        &:hover {
+            background-color: lighten($background-color-2, 2%);
+        }
+    }
+
     & .tech-carasousel-control {
-        width: 40px;
-        height: 40px;
         flex: none;
-        background: blue;
         margin: 10px;
+    }
+
+    & .tech-carasoul-control-button {
+        width: 30px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
     }
 }
 
@@ -112,6 +133,20 @@
     box-sizing: border-box;
     padding-bottom: var(--percentage);
     position: relative;
+
+    transition: all .18s ease-out;
+
+    @for $i from 1 through 20 {
+        &:nth-child(#{$i}) {
+            transition-delay: $i * 0.05s;
+        }
+    }
+
+    &.tech-item-hidden {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
     & .tech-item-inner {
         --padding: 10px;
         position: absolute;
@@ -162,4 +197,9 @@
             box-shadow: 0 10px 40px -10px #000;
         }
     }
+}
+
+.tech-fade-in {
+    opacity: 0;
+    pointer-events: none;
 }
