--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 body {
 	height: 100%;
+	overflow-x: hidden;
 	background-color: transparent !important;
 }
 body, html, #root {
@@ -14,7 +15,8 @@ body, html, #root {
 	color: $color;
 	font-family: "Roboto", sans-serif;
 	position: relative;
-	box-sizing:border-box
+	box-sizing: border-box;
+	
 }
 html {
 	overflow-x: hidden;
