Major updates to the web app

--- a/client/src/styles/config.scss
+++ b/client/src/styles/config.scss
@@ -15,6 +15,9 @@ $header-underline-color: $color-2;
 
 $box-shadow: 0 0 15px #000;
 
+$page-gap: 10px;
+$page-constrict: 700px;
+
 @mixin background-opacity($color, $opacity: 0.3) {
 	background: $color; /* The Fallback */
 	background: rgba($color, $opacity);
