--- a/client/src/styles/tech.scss
+++ b/client/src/styles/tech.scss
@@ -3,14 +3,14 @@
 
 .tech-cont {
 
-    & .tech-inner {
+    .tech-inner {
 
-        
+        transition: padding .2s ease-in-out;
         padding-top: 160px;
         position: relative;
 
-        & .tech-items-grid {
-            position: absolute;
+        .tech-items-grid {
+            position: relative;
             display: flex;
             flex-wrap: wrap;
             width: 100%;
@@ -18,6 +18,9 @@
         }
     }
 
+}
+.carasoul-visible .tech-inner {
+    padding-top: 0;
 }
 
 
@@ -83,6 +86,7 @@
         &.tech-cart-item-active {
             transform: translateY(0);
             opacity: 1;
+            transition-delay: .18s;
 
             & .tech-cart-item-content {
                 opacity: 1;
